--- a/amplify.yml
+++ b/amplify.yml
@@ -10,6 +10,7 @@ frontend:
     build:
       commands:
         - npm run build
+        - npm install react-router-dom
   artifacts:
     baseDirectory: dist
     files:
