--- a/amplify.yml
+++ b/amplify.yml
@@ -11,6 +11,7 @@ frontend:
       commands:
         - npm run build
         - npm install react-router-dom
+        - npm i @chakra-ui/react @emotion/react @emotion/styled framer-motion
   artifacts:
     baseDirectory: dist
     files:
