you know how it do

--- a/amplify.yml
+++ b/amplify.yml
@@ -12,6 +12,7 @@ frontend:
         - npm run build
         - npm install react-router-dom
         - npm i @chakra-ui/react @emotion/react @emotion/styled framer-motion
+        - npm install @chakra-ui/icons
   artifacts:
     baseDirectory: dist
     files:
